Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35355

Galera test failure on galera_sr.mysql-wsrep-features#165

    XMLWordPrintable

Details

    Description

      galera_sr.mysql-wsrep-features#165       w3 [ fail ]  Found warnings/errors in server log file!
      21:30:48         Test ended at 2024-11-05 19:30:48
      21:30:48 line
      21:30:48 safe_mutex: Found wrong usage of mutex 'wait_mutex' and 'LOCK_thd_data'
      21:30:48 safe_mutex: Found wrong usage of mutex 'wait_mutex' and 'LOCK_thd_kill'
      21:30:48 ^ Found warnings in /tmp/workspace/mariadb-10.6-mtr/mysql-test/var/3/log/mysqld.1.err
      

      Attachments

        Activity

          People

            sysprg Julius Goryavsky (Inactive)
            janlindstrom Jan Lindström
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3d
                3d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.